# h3-pg

./: .gitignore  CHANGELOG.md  CMakeLists.txt  build.sh  h3.control
.github/docker/: tools.sh
cmake/: FetchH3.cmake
sql/: CMakeLists.txt
sql/install/: 13-opclass_gist.sql  14-opclass_spgist.sql
src/: CMakeLists.txt  extension.c  extension.in.h  hierarchy.c  indexing.c  inspection.c  miscellaneous.c  opclass_btree.c  opclass_gist.c  opclass_hash.c  opclass_spgist.c  regions.c  traversal.c  type.c  uniedges.c
src/upstream/: h3Index.h
test/expected/: opclass_gist.out
test/sql/: opclass_gist.sql  opclass_spgist.sql
